fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -672,7 +672,6 @@ img#footer {
   #impact-statement {
     margin-top: 0;
     margin-bottom: 0;
-    padding: 0 48px 0 48px;
     background-color: var(--colorBrown100);
     text-align: center;
   }
@@ -751,11 +750,6 @@ img#footer {
     max-width: 264px;
   }
 
-  #contact > div {
-    flex-direction: column;
-    padding-right: 48px;
-  }
-
   #contact-means {
     display: flex;
     flex-direction: column;
@@ -785,15 +779,8 @@ img#footer {
     flex: 0 0 auto;
   }
 
-  .section {
-    padding-left: 48px;
-    padding-right: 48px;
-    width: 100%;
-  }
-
   .mission {
     flex-direction: column;
-    padding: 0 48px 0 48px;
     text-align: center;
   }
 
@@ -822,6 +809,17 @@ img#footer {
 
   .paragraphs-small div {
     margin-bottom: 0;
+  }
+
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .padding {
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
@@ -857,12 +855,27 @@ img#footer {
     gap: 12px;
   }
 
-  .section {
+  .padding {
     padding-left: 24px;
     padding-right: 24px;
   }
+
   .mission {
     padding: 0 24px 0 24px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  #profiles {
+    overflow-x: auto;
+    justify-content: left;
+    scrollbar-width: none;
+  }
+
+  #profiles > div {
+    min-width: 264px;
   }
 }
 
